[tool.poetry]
name = "moose-adapter"
version = "0.0.1"
description = "A package for interacting with the Deep Lynx data warehouse and MOOSE, Multiphysics Object-Oriented Simulation Environment"
authors = ["Jeren Browning <jeren.browning@inl.gov>", "Katherine Wilsdon <katherine.wilsdon@inl.gov>"]
maintainers = ["Jeren Browning <jeren.browning@inl.gov>", "Katherine Wilsdon <katherine.wilsdon@inl.gov>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = [
    "Deep-Lynx",
    "MOOSE"
]
[tool.poetry.dependencies]
python = "^3.7"
flask = "*"
requests = "*"
python-dotenv = "*"
deep-lynx = "*"
configparser = "^5.0.2"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.6.1"
pytest = "^6.2.4"
coverage = "^5.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "wsgi:main"

[tool.poetry.urls]
issues = ""
