[tool.poetry]
name = "moose-adapter"
version = "0.0.3"
description = "A package for interacting with the Deep Lynx data warehouse and MOOSE, Multiphysics Object-Oriented Simulation Environment"
authors = ["Jeren Browning <jeren.browning@inl.gov>", "Katherine Wilsdon <katherine.wilsdon@inl.gov>"]
maintainers = ["Jeren Browning <jeren.browning@inl.gov>", "Katherine Wilsdon <katherine.wilsdon@inl.gov>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = [
    "Deep-Lynx",
    "MOOSE"
]
[tool.poetry.dependencies]
python = "^3.7"
flask = "*"
requests = "*"
python-dotenv = "*"
deep-lynx = "*"
configparser = "*"
pandas = "*"
environs = "*"

[tool.poetry.dev-dependencies]
pytest-mock = "*"
pytest = "*"
coverage = "*"
pytest-cov = "*"
yapf = "*"
toml = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "wsgi:main"

[tool.poetry.urls]
issues = ""
